agrege contador de cada producto  al carrito (no la cantidad)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav-container">
         <nav class="navbar">
             <h1 class="navbar-logo">Tienda de Vinos</h1>
-            <h1 class="ver-carrito" id="verCarrito"><img src="imag/icons8-shopping-cart-48.png" alt=""></h1>
+            <h1 class="ver-carrito" id="verCarrito"><img src="imag/icons8-shopping-cart-48.png"  alt=""><span id="cantidadCarrito" class="cantidad-carrito" ></span></h1>
         </nav>
     </div>
 
