cree carpeta JS y archivo carrito.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tienda de Vinos preentrega-2</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="./JS/main.js"></script>
+    <script defer src="./JS/carrito.js"></script>
     </head>
 <body>
     <!--navBar-->
