--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <h1 class="ver-carrito" id="verCarrito"><img src="imag/icons8-shopping-cart-48.png"  alt="imagen carrito"><span id="cantidadCarrito" class="cantidad-carrito" ></span></h1>
         </nav>
     </div>
+    <!--banner-->
+<div class="banner">
+    <div class="banner-container">
+        <h1>Tienda de Vinos</h1>
+        <p>El mejor sitio para comprar tus <span>vinos</span></p>
+    </div>
+</div>
 
     <!--Shop content -->
 <div id="shopContent" class="shop-content"></div>
