Agrege botón vaciar carrito y solucione problemas en el contador de productos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Vinos preentrega-2</title>
+   
+    
+  
+    <!--link css-->
     <link rel="stylesheet" href="style.css">
+    <!--script-->
     <script defer src="./JS/main.js"></script>
     <script defer src="./JS/carrito.js"></script>
     </head>
@@ -29,7 +34,7 @@
 
 
 <!--modal-container-->
-<div id="modal-container" class="modal-container"></div>
+<div id="modal-container" class="modal-container .mb 5"></div>
 
 
 </body>
