--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Vinos preentrega-2</title>
+   <!--link boostrap-->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
-    
-  
-    <!--link css-->
-    <link rel="stylesheet" href="style.css">
+    <!--link animate-->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+     <!--link css-->
+     <link rel="stylesheet" href="style.css">
     <!--script-->
     <script defer src="./JS/main.js"></script>
     <script defer src="./JS/carrito.js"></script>
+    <script defer src="./JS/sweetalert.js"></script>
     </head>
 <body>
     <!--navBar-->
@@ -25,7 +31,7 @@
 <div class="banner">
     <div class="banner-container">
         <h1>Tienda de Vinos</h1>
-        <p>El mejor sitio para comprar tus <span>vinos</span></p>
+        <p>El mejor sitio para comprar tus vinos</p>
     </div>
 </div>
 
@@ -35,7 +41,9 @@
 
 <!--modal-container-->
 <div id="modal-container" class="modal-container .mb 5"></div>
-
-
+<!--boostrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!--sweetalert2-->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
