--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Vinos preentrega-2</title>
+    <title>Tienda de Vinos </title>
    <!--link boostrap-->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <!--link toastify-->
@@ -39,9 +39,10 @@
     <!--Shop content -->
 <div id="shopContent" class="shop-content"></div>
 
-
-<!--modal-container-->
+   <!--modal-container-->
 <div id="modal-container" class="modal-container .mb 5"></div>
+ 
+
 <!--toastify-->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <!--boostrap-->
@@ -49,4 +50,9 @@
 <!--sweetalert2-->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+<footer>
+   <section class="footer-tienda">
+        <h2>Tienda de Vinos - Creada por Ariel Navarro </h2>
+   </section> 
+</footer>
 </html>
